--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -24,11 +24,11 @@
                 {% for news in top_three_news%}
                     <div class="article">
 
-                        <a href="/{{news.id}}"> <img src="imgs/{{news.article_image}}">
-                            <h3>{{news.title}}</h3>
-                            <p>
+                        <a href="{{news.url}}" target="_blank"> <img src="{{news.article_image}}" style="width:300px;height:150px;">
+                            <h3>{{news.title|slice:":55"}}...</h3>
+                            <h6>
                                 {{news.details|slice:":120" }}...<br><span style="float:right;margin-top:5px" class = 'readMore'>Read More </span>
-                            </p>
+                            </h6>
                         </a>
                         
 
