--- a/main/templates/top_trending.html
+++ b/main/templates/top_trending.html
@@ -24,8 +24,8 @@
                 {% for news in top_three_news%}
                     <div class="article">
 
-                        <a href="/{{news.id}}"> <img src="imgs/{{news.article_image}}">
-                            <h3>{{news.title}}</h3>
+                        <a href="/{{news.id}}"> <img src="{{news.article_image}}" style="width:300px;height:150px;">
+                            <h3>{{news.title|slice:":55"}}</h3>
                             <p>
                                 {{news.details|slice:":120" }}...<br><span style="float:right;margin-top:5px" class = 'readMore'>Read More </span>
                             </p>
