--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -25,9 +25,9 @@
                     <div class="article">
 
                         <a href="{{news.url}}" target="_blank"> <img src="{{news.article_image}}" style="width:300px;height:150px;">
-                            <h3>{{news.title|slice:":55"}}...</h3>
+                            <h5>{{news.title|slice:":100"}}</h5>
                             <h6>
-                                {{news.details|slice:":120" }}...<br><span style="float:right;margin-top:5px" class = 'readMore'>Read More </span>
+                                <span style="float:right;margin-top:5px" class = 'readMore'>Read More </span>
                             </h6>
                         </a>
                         
