--- a/main/templates/sidebar.html
+++ b/main/templates/sidebar.html
@@ -2,7 +2,7 @@
     <div class="sidebar">
         <div id="mySidebar" class="sidebar">
             <a href="home">Home</a>
-            <a href="headlines">For You!</a>
+            <a href="for-you">For You!</a>
             <a href="top-trending">Top Trending</a>
             <a href="bookmarks">Bookmarks</a>
             <div class='foot'>
