--- a/main/templates/category.html
+++ b/main/templates/category.html
@@ -26,17 +26,17 @@
                 
             {%else%}    
                 {% for news in category_news %}
-                    <div class="article">
+                <div class="article">
 
-                        <a href="/{{news.id}}"> <img src="imgs/{{news.article_image}}">
-                            <h3>{{news.title}}</h3>
-                            <p>
-                                {{news.details|slice:":120" }}...<br><span style="float:right;margin-top:5px" class = 'readMore'>Read More </span>
-                            </p>
-                        </a>
-                        
+                    <a href="{{news.url}}" target="_blank"> <img src="{{news.article_image}}" style="width:300px;height:150px;">
+                        <h5>{{news.title|slice:":70"}}</h5>
+                        <h6>
+                            <span style="float:right;margin-top:5px" class = 'readMore'>Read More </span>
+                        </h6>
+                    </a>
+                    
 
-                    </div>
+                </div>
                 {% endfor %}
             {%endif%}        
   	    </div>
